# ABS-Simulator

./: README.md  pyproject.toml  requirements.txt
abs_sim/: __init__.py
abs_sim/config/tracks/: curve_braking.yaml  figure_8.yaml  oval.yaml
abs_sim/control/: __init__.py  brake_actuator.py  pid.py  stability.py  wheel_abs.py
abs_sim/drivers/: __init__.py  policies.py
abs_sim/physics/: __init__.py  chassis.py  tire.py  vehicle.py  wheel.py
abs_sim/sim/: __init__.py  events.py  simulation.py  telemetry.py
abs_sim/track/: __init__.py  loader.py  presets.py  track.py
abs_sim/viz/: __init__.py  camera.py  hud.py  pygame_app.py  reports.py  top_down.py  wheel_panel.py
runs/abs_compare/: abs_off_snow.csv  abs_on_snow.csv
runs/personas/: summary_f1_like.csv
runs/three_driver/: early_abs_off.csv  early_abs_on.csv  late_abs_off.csv  late_abs_on.csv  ontime_abs_off.csv  ontime_abs_on.csv
scripts/: run_abs_compare.py  run_interactive.py  run_persona_comparison.py  run_random_surface_demo.py  run_three_driver_demo.py
tests/: test_control.py  test_drivers.py  test_dynamics.py  test_simulation.py  test_stability.py  test_tire.py  test_track.py
